2001-09-12  jacob berkman  <jacob@ximian.com>

	* gnome-terminal.c: fixup window icon stuff - leave out until it
	gets re-added

2001-09-05  jacob berkman  <jacob@ximian.com>

	* gnome-terminal.xml: 
	* gnome-terminal.c (copy_url_cmd): add a `copy link location'
	thing to the right click menu - should it use a different
	clipboard thing though?

2001-09-04  jacob berkman  <jacob@ximian.com>

	* gnome-terminal.c: make it compile against current gnome-libs
	
	* gnome-terminal.c (button_press): set the hidden attribute on the
	model rather than the view side of the things

2001-09-04  Darin Adler  <darin@bentspoon.com>

	* gnome-terminal.xml: Add Copy command.

2001-09-01  Darin Adler  <darin@bentspoon.com>

	* gnome-terminal.c: (copy_cmd): Add. (paste_cmd): Use the new
	zvt_term_paste_clipboard instead of using our own.

2001-08-30  jacob berkman  <jacob@ximian.com>

	* gnome-terminal.c: port some stuff to gnome 2.

	* Makefile.am: comment out corba stuff for now as this hasn't been
	ported.

2001-08-03  Abel Cheung  <maddog@linux.org.hk>

	* *.desktop : Reviewed/Modified/Added traditional Chinese strings.

2001-08-03  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-terminal.desktop: Added nynorsk.
	
Mon Jun 25 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-terminal.c (new_terminal_cmd): Change the matching regex so that
	  you can't dingus click things like a www-admin user in 'ls- l' output.
	  There must now be either a period in the string, or it must start with
	  'http:' or 'ftp:' (fixes bug #51939).

	* gnome-terminal.glade: A couple of entries in the colour palette were out
	  of order. Not any more (bug #51376).

2001-05-30  Havoc Pennington  <hp@redhat.com>

	* gnome-terminal.c (paste_cmd): Paste pastes the clipboard, not
	the selection. http://www.freedesktop.org/standards/clipboards.txt

Mon May 21 01:49:01 2001  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* Applied patch from Martin Pool <mbp@samba.org> to correct some