@@ -1,5 +1,9 @@
 2001-09-12  jacob berkman  <jacob@ximian.com>
 
+	* session-properties-capplet.c (main):
+	* main.c (main):
+	* save-session.c (main): re-enable window icon code
+
 	* ice.c (accept_connection): do a better fix for the deadlock
 
 	* Makefile.am: cleanup a bit
